--- a/package.json
+++ b/package.json
@@ -1,15 +1,39 @@
 {
   "name": "reavers-site",
+  "version": "0.1.0",
   "private": true,
-  "type": "module",
-  "version": "0.0.1",
   "scripts": {
-    "dev": "astro dev",
-    "build": "astro build",
-    "preview": "astro preview",
-    "check": "astro check"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint",
+    "studio": "next dev -p 3333",
+    "generate": "shadcn-ui add"
+  },
+  "dependencies": {
+    "next": "14.2.5",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "typescript": "5.6.2",
+    "tailwindcss": "3.4.13",
+    "postcss": "8.4.47",
+    "autoprefixer": "10.4.20",
+    "lucide-react": "0.474.0",
+    "clsx": "2.1.1",
+    "@sanity/client": "6.20.2",
+    "next-sanity": "9.7.3",
+    "sanity": "3.61.0",
+    "@sanity/vision": "3.61.0",
+    "@sanity/icons": "2.11.4",
+    "@sanity/image-url": "1.0.2",
+    "zod": "3.23.8",
+    "resend": "3.2.0"
   },
   "devDependencies": {
-    "astro": "^4.14.0"
+    "@types/node": "20.11.30",
+    "@types/react": "18.3.8",
+    "@types/react-dom": "18.3.0",
+    "eslint": "9.12.0",
+    "eslint-config-next": "14.2.5"
   }
 }
